--- a/demo.ipynb
+++ b/demo.ipynb
@@ -71,21 +71,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Initial loss: 0.9808868\n"
+      "Initial loss: 0.99730146\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [00:00<00:00, 118.37it/s]"
+      "100%|██████████| 100/100 [00:01<00:00, 97.61it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Final loss: 0.0001356766\n"
+      "Final loss: 0.00014629481\n"
      ]
     },
     {
@@ -132,7 +132,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "jaxtorch",
    "language": "python",
    "name": "python3"
   },
@@ -146,7 +146,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.1"
+   "version": "3.11.12"
   }
  },
  "nbformat": 4,
